--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Banda App</title>
+    <title>My Banda</title>
   </head>
-  <body>
+  <body class="font-body">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
